--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,5 +23,6 @@
         </activity>
         <activity android:name=".activity.QuizActivity" />
         <activity android:name=".activity.QuizStatActivity" />
+        <activity android:name=".activity.WordListActivity" />
     </application>
 </manifest>
