--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".activity.QuizActivity" />
         <activity android:name=".activity.QuizStatActivity" />
         <activity android:name=".activity.WordListActivity" />
+        <activity android:name=".activity.AllDictionariesActivity" />
         <activity android:name=".MainActivity" />
     </application>
 </manifest>
